--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
       - checkout
       - node/install-packages: 
           pkg-manager: npm
-      # - run:
-          # name: Run tests
-          # command: npm test
+      - run:
+          name: Run tests
+          command: npm test
       - run : 
           name : Run build
           command: npm run build 
