--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.0",
+    "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^11.2.0"
   }
 }
